# airplane-mode

./: .gitignore  AGENTS.md  CANON.md  CLAUDE.md  Cargo.toml  README.md  manifest.yaml  run.sh  slack-app-manifest.yaml
backlog/: README.md  m0.5.md  m0.md  m1.md  m2.md  m3.md  m4.md  m5.md
crates/airplane-core/: Cargo.toml  README.md
docs/: browser-gpu-spike-report.md  hipaa-cloudflare-boundary.md  model-setup.md  phone-feasibility-research-plan.md  sovereign-network-pattern.md  webgpu-vs-mlx.md
docs/contracts/: scrub-response.schema.json
docs/demo/: fsm-service-map.md  how-the-demo-works.md  onboarding.md  phone-https-observability.md  publish-orientation.md  reference-architecture.md  review-readiness.md  stack-adoption-proof.md  system-network-data-flows.md
docs/deprecations/: README.md  gitops-revival-runbook.md
docs/positioning/: cncf-end-user-and-inference-ecosystem.md  prismml-partner-brief.md
docs/prismml-community-lab/: GOAL.md  README.md
docs/seed/: bonsai-ecosystem-brief.md
eval/: README.md  golden-run.txt
files/: adr-014-portable-rust-core.md  adr-015-airplane-mode-simulated-in-web-demo.md  rfc-002-final-ship.md
gates/: README.md
packs/: README.md
packs/coach-session/: pack.yaml  policy.yaml  provenance.yaml  schema.yaml  sink.yaml
scripts/: serve-gpu-probe.sh  serve-local-https-proxy.sh  smoke-ethical-gate-fixtures.sh  smoke-mcp-cli-parity.sh  vendor-browser-model.sh  vendor-browser-runtime.sh  wait-phone-browser-request.sh  wait-phone-capability.sh
shells/: README.md
shells/cli/: Cargo.toml
shells/cli/src/: main.rs
(+70 files in other folders)
